[package]
name = "qwe"
version = "0.1.0"
edition = "2024"

[dependencies]
url = {version = "2.5" , features = ["serde"]}
time = { version = "0.3", features = ["serde"]}
humantime = "2.3"
thiserror = "2.0"
config = "0.15"
humantime-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
toml = "0.9"