[package]
name = "update_location"
version = "0.1.0"
edition = "2024"

[dependencies]
url = {version = "2.5" , features = ["serde"]}
thiserror = "2.0"
config = "0.15"
humantime-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
serde_json = "1.0.145"
override_key_core = { path = "../libs/override_key_core" }
override_key_derive = { path = "../libs/override_key_derive" }