[package]
name = "update_location"
version = "0.1.0"
edition = "2024"

[dependencies]
url = {version = "2.5.7" , features = ["serde"]}
thiserror = "2.0.17"
config = "0.15.18"
humantime-serde = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.51", features = ["derive"] }
override_key_core = { path = "../libs/override_key_core" }
override_key_derive = { path = "../libs/override_key_derive" }
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }