[package]
name = "override_key_derive"
version = "0.1.0"
edition = "2024"
description = "Proc-macro derive for applying CLI config overrides"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.41"
proc-macro2 = "1.0.101"
override_key_core = { path = "../override_key_core" }